# fin-research-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
prompts/: analyst.yaml  generator_v1.yaml  generator_v2.yaml  intent.yaml  planner.yaml  validator.yaml
scripts/: run_evaluation.py  run_hybrid_evaluation.py  verify_conversation_memory.py  verify_download.py  verify_fallback.py  verify_generation.py  verify_intent_routing.py  verify_logging.py  verify_parsing.py  verify_planner.py  verify_prompt_version.py  verify_tool_calling.py  verify_vectorization.py
src/agents/: __init__.py  analyst.py  base.py  fetcher.py  generator.py  intent.py  planner.py  validator.py
src/api/: __init__.py  server.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/data/: __init__.py  company_list.py  download_filings.py  parser.py
src/evaluation/: __init__.py  evaluator.py  test_queries.json  test_questions.json
src/graph/: __init__.py  research_graph.py
src/tools/: __init__.py  calculator.py  hybrid_search.py  sec_filings.py  tool_registry.py
tests/: __init__.py  test_graph.py  test_intent.py  test_sec_filings.py
